--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,12 @@ img {
   margin: 0 auto;
   display: block;
 }
-
-
+input{
+  color: black;
+}
+.guessfield{
+  color: black;
+}
 
 /* HEADER STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -138,7 +142,9 @@ nav li:nth-child(2n+1) a:after {
   width: 5px;
   height: 5px;
 }
-
+#guessGameBlock{
+  display: none;
+}
 
 
 /* SERVICES STYLES
@@ -222,78 +228,6 @@ nav li:nth-child(2n+1) a:after {
 }
 
 
-
-/* CONTACT STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.contact {
-  color: black;
-  text-align: center;
-}
-
-.contact p {
-  margin: 70px 0 0;
-}
-
-.contact ul a {
-  margin-top: 50px;
-  box-shadow: none;
-  background: none;
-  margin-left: 30px;
-}
-
-.contact li:nth-child(1) a {
-  margin-left: 0;
-}
-
-.contact span {
-  font-size: 2em;
-  color: white;
-  -webkit-transition: color ease .4s;
-          transition: color ease .4s;
-}
-
-.contact span:hover {
-  color: steelblue;
-}
-
-.contact .btn-blue {
-  position: relative;
-  margin-top: 30px;
-  color: white;
-  background: steelblue;
-  box-shadow: 0 8px #3b6d97;
-}
-
-.contact .btn-blue:hover {
-  background: #427aa9;
-  color: white;
-}
-
-.contact .btn-blue:after {
-  position: absolute;
-  content: '☃';
-  top: 5px;
-  right: 30px;
-  font-size: 1.6em;
-}
-
-.contact .btn-blue:active {
-  box-shadow: 0 4px #3b6d97;
-  -webkit-transform: translateY(4px);
-      -ms-transform: translateY(4px);
-          transform: translateY(4px);
-}
-
-.contact .creator a {
-    background: none;
-}
-
-
-
-/* MEDIA QUERIES STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 @media (min-width: 550px) {
 
   nav li {
@@ -342,7 +276,6 @@ nav li:nth-child(2n+1) a:after {
   }
 
 }
-
 
 
 @media (min-width: 750px) {
