--- a/css/style.css
+++ b/css/style.css
@@ -682,3 +682,31 @@ nav {	margin:auto;	max-width: auto;	}
 	.navigation li { display: inline-block; margin-right: 1rem;}	
 	.navigation li a { color: #0e0e02;}
 }
+
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+ 
+  color: white;
+}
