--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,9 @@
 
 body {
   background: #FDD761;
-  font-family: 'Lucida Sans Unicode', 'Arial', serif;
   color: white;
 }
 
-h1, h3, h4, header .btn {
-  font-weight: 700;
-}
 
 h1 {
   margin: 100px 0 20px;
@@ -298,6 +294,7 @@ nav li:nth-child(2n+1) a:after {
     width: 85%;
     padding: 0; }
 }
+@import url('https://fonts.googleapis.com/css?family=Cinzel:700|Dancing+Script');
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
@@ -374,8 +371,8 @@ html {
 body {
   font-size: 1.5em; 
   line-height: 1.6;
-  font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 540;
+  font-family: 'Cinzel', serif;
   color: #222; }
 
 
@@ -384,7 +381,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
-  font-weight: 300; }
+  font-weight: 500; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -403,7 +400,8 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 }
 
 p {
-  margin-top: 0; }
+  margin-top: 0;
+font-size: 2rem ;}
 
 
 /* Links
@@ -552,7 +550,8 @@ ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
 li {
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+ font-size: 2rem }
 
 
 /* Code
